@@ -1,0 +1,3 @@
+page_precedence "rnR"
+
+line_max 299
