@@ -1,0 +1,5 @@
+\begin{theindex}
+
+  \item foo, I-13, I-15--I-17, II-10, II-20, II-30
+
+\end{theindex}
