@@ -1,0 +1,9 @@
+\begin{theindex}
+
+  \item bar, 1--3, c, d, i, l, m, v, x, C, D, I, L, M, V, X
+
+  \indexspace
+
+  \item foo, 1--3, c, d, i, l, m, v, x, C, D, I, L, M, V, X
+
+\end{theindex}
