@@ -1,2 +1,2 @@
-#define VERSION  "version " PACKAGE_VERSION " [19-Sep-2021]"
+#define VERSION  "version " PACKAGE_VERSION " [22-May-2022]"
 #define BUG_ADDRESS "issue@texjp.org"
